--- a/socket.io/index.html
+++ b/socket.io/index.html
@@ -51,11 +51,14 @@
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script>
+     -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/socket.io/4.1.3/socket.io.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-1.11.1.js"></script> -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(function () {
-        var socket = io.connect("./");
+        var socket = io.connect("http://localhost:3001");
         $("form").submit(function () {
           socket.emit("chatmessage", $("#m").val());
           $("#m").val("");
