--- a/socket.io/index.html
+++ b/socket.io/index.html
@@ -58,13 +58,16 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(function () {
-        var socket = io.connect("http://localhost:3001");
+        var socket = io.connect("https://luntan-socket.vercel.app/socket");
         $("form").submit(function () {
           socket.emit("chatmessage", $("#m").val());
           $("#m").val("");
           return false;
         });
 
+        socket.on("connection", function () {
+          console.log("connection");
+        });
         socket.on("chatmessage", function (msg, id) {
           console.info(id, msg);
           $("#messages").append($("<li>").text(msg));
