--- a/socket.io/index.html
+++ b/socket.io/index.html
@@ -58,7 +58,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(function () {
-        var socket = io.connect("https://luntan-socket.vercel.app/socket");
+        var socket = io.connect("https://luntan-socket.vercel.app/");
         $("form").submit(function () {
           socket.emit("chatmessage", $("#m").val());
           $("#m").val("");
