--- a/public/index.html
+++ b/public/index.html
@@ -49,17 +49,19 @@
   <body>
     <ul id="messages"></ul>
     <input id="m" autocomplete="off" /><button>Send</button>
-    <!-- <script src="/socket.io/socket.io.js"></script>
-     -->
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="./socket.io.js"></script>
+
     <!-- <script src="https://cdn.bootcdn.net/ajax/libs/socket.io/4.1.3/socket.io.min.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/gh/socketio/socket.io-client@master/dist/socket.io.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/socketio/socket.io-client@master/dist/socket.io.min.js"></script> -->
     <!-- <script src="https://code.jquery.com/jquery-1.11.1.js"></script> -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(function () {
-        // var socket = io.connect("https://luntan-socket.vercel.app/");
-        var socket = io.connect("http://localhost:3001");
-        $("#button").click(function () {
+        var socket = io.connect("https://luntan-socket.vercel.app/");
+        // var socket = io.connect();
+        // var socket = io.connect("http://localhost:3001");
+        $("button").click(function () {
           socket.emit("chatmessage", $("#m").val());
           socket.emit("add user", $("#m").val());
           socket.emit("send_private_message", $("#m").val());
