--- a/public/index.html
+++ b/public/index.html
@@ -58,8 +58,8 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
       $(function () {
-        var socket = io.connect("https://luntan-socket.vercel.app/");
-        // var socket = io.connect();
+        // var socket = io.connect("https://luntan-socket.vercel.app/");
+        var socket = io.connect();
         // var socket = io.connect("http://localhost:3001");
         $("button").click(function () {
           socket.emit("chatmessage", $("#m").val());
